# ibc-solo-machine

./: Cargo.toml
app/: Cargo.toml
app/src/: app.rs  chain.rs  config.rs  error.rs  lib.rs  main.rs  message.rs  pages.rs  state.rs  style.rs
app/src/pages/: add_chain_page.rs  main_page.rs
signers/ledger-signer/: Cargo.toml
signers/ledger-signer/src/: apps.rs  ledger_hid.rs  ledger_signer.rs  lib.rs
signers/mnemonic-signer/src/: lib.rs
solo-machine-core/src/: lib.rs  model.rs  proto.rs  signer.rs  transaction_builder.rs  utils.rs
solo-machine-core/src/model/chain/: chain.rs
solo-machine-core/src/service/: chain_service.rs  ibc_service.rs
solo-machine/proto/: ibc.proto
solo-machine/src/: lib.rs  main.rs
solo-machine/src/command/: chain.rs  ibc.rs
solo-machine/src/server/: chain.rs  ibc.rs
