[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3.0", features = ["tokio", "debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
solo-machine-core = { path = "../solo-machine-core"}
directories-next = "2.0"
tokio = { version = "1.14", features = ["fs"] }
rust_decimal = "1.17.0"
num-rational = "0.4.0"
tendermint = "0.23.0"

